--- a/views/index.erb
+++ b/views/index.erb
@@ -33,6 +33,7 @@
 	<input name="filter" type="text" value="<%= h options[:filter] %>" placeholder="使えない文字がありますが察してください。">
 	<input type="submit" value="フィルター">
 </form>
+<a class="readme" target="_blank" href="https://github.com/tatat/kaomoji.html/blob/master/README.md">README</a>
 </header>
 <article id="kaomoji">
 <a href="#" id="select">Get!</a>
