--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -22,13 +22,22 @@ h1 a {
 	color: #ddd;
 	text-decoration: none;
 }
-a.readme {
-	font-size: 0.5em;
-	line-height: 1em;
+ul.menu {
 	position: absolute;
 	left: 1em;
 	bottom: 0.5em;
 	display: block;
+	font-size: 0.5em;
+	line-height: 1em;
+}
+ul.menu li {
+	display: inline-block;
+}
+ul.menu li + li {
+	margin-left: 0.5em;
+}
+ul.menu a {
+
 }
 span.kaomoji {
 	color: #333;
