--- a/views/pagination.erb
+++ b/views/pagination.erb
@@ -4,29 +4,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=640" />
 <title>
-	<% if options[:filter].length == 0 %>
-		TLで集めた顔文字とか<%= records.length %>個。
-	<% else %>
-		TLで集めた顔文字とかの中から「<%= h options[:filter] %>」が含まれるもの<%= records.length %>個。
-	<% end %>
+<% if options[:filter].length == 0 %>
+	TLで集めた顔文字とか<%= records.pager.total %>個<%= records.pager.current_page %>/<%= records.pager.total_pages %>ページ目。
+<% else %>
+	TLで集めた顔文字とかの中から「<%= h options[:filter] %>」が含まれるもの<%= records.pager.total %>個<%= records.pager.current_page %>/<%= records.pager.total_pages %>ページ目。
+<% end %>
 </title>
 <link type="text/css" rel="stylesheet" href="/stylesheets/html5reset-1.6.1.css" />
 <link type="text/css" rel="stylesheet" href="/stylesheets/index.css" />
-<script type="text/javascript" src="/javascripts/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="/javascripts/index.js"></script>
+<link type="text/css" rel="stylesheet" href="/stylesheets/pagination.css" />
 </head>
 <body>
-<noscript><style type="text/css">span.kaomoji { display:block} h1 span.loading, #select {display:none;} </style></noscript>
 <header>
 <h1>
 	<a href="/">
 		<% if options[:filter].length == 0 %>
-			TLで集めた顔文字とか<%= records.length %>個。
+			TLで集めた顔文字とか<%= records.pager.total %>個<%= records.pager.current_page %>/<%= records.pager.total_pages %>ページ目。
 		<% else %>
-			TLで集めた顔文字とかの中から「<%= h options[:filter] %>」が含まれるもの<%= records.length %>個。
+			TLで集めた顔文字とかの中から「<%= h options[:filter] %>」が含まれるもの<%= records.pager.total %>個<%= records.pager.current_page %>/<%= records.pager.total_pages %>ページ目。
 		<% end %>
 	</a>
-	<span class="loading">（ちょっと待って読み込み中.. <span class="progress"></span>）</span>
 </h1>
 <p>最終更新日：<%= modified.strftime('%Y-%m-%d %H:%M:%S') %></p>
 <form id="filter" action="<%= h request.path %>">
@@ -35,16 +32,13 @@
 </form>
 <ul class="menu">
 	<li><a class="readme" target="_blank" href="https://github.com/tatat/kaomoji.html/blob/master/README.md">README</a></li>
+	<li><a href="/kaomoji.html">ALL</a></li>
 </ul>
 </header>
 <article id="kaomoji">
-<a href="#" id="select">Get!</a>
+<%= _pager = records.pager.to_html(request.fullpath, :next_text => '»', :previous_text => '«') %>
 <ul><% records.each do |record| %><li><span class="kaomoji"><%= h(record.text.force_encoding("utf-8")).gsub(/ /, '&nbsp;') %></span></li><% end %></ul>
-</article>
-<article id="kaomoji-selected">
-<p>コピペとか！そういうやつ！</p>
-<textarea name="selected" id="selected" cols="30" rows="10" wrap="off"></textarea>
-<p><a href="#" id="back">Back!</a></p>
+<%= _pager %>
 </article>
 </body>
 </html>
