欲しいものリストのリンク追加した。

--- a/views/index.erb
+++ b/views/index.erb
@@ -35,6 +35,7 @@
 </form>
 <ul class="menu">
 	<li><a class="readme" target="_blank" href="https://github.com/tatat/kaomoji.html/blob/master/README.md">README</a></li>
+	<li><a href="http://www.amazon.co.jp/registry/wishlist/EJAH0HHANJ5/ref=cm_sw_r_tw_ws_jY7hrb12Y2ABC" target="_blank">欲しい</a></li>
 </ul>
 </header>
 <article id="kaomoji">
